--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     padding: 1em;
     margin-bottom: 1em;
     position: relative;
+    text-align: left;
 }
 .problem h3 {
     margin-top: 0;
@@ -32,6 +33,7 @@ body {
     padding: 1em;
     margin-top: 1em;
     white-space: pre-wrap;
+    font-family: 'Courier New', Courier, monospace;
 }
 .button-container {
     display: flex;
